--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title: Mr.Brown
-description: Mr.Brown is a responsive jekyll theme
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+title: Java Creed
+description: Java Creed Blog
+url: "https://javacreed.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: ':title/'
-baseurl: "/mr-brown" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 
 # Comments
-discus_identifier: mr-brown
-txtpen_identifier: raizer85
+discus_identifier: javacreed
+txtpen_identifier: javacreed
 
 # Social settings
-twitter_url: https://twitter.com/artemsheludko_
-facebook_url: https://facebook.com/
-googleplus_url: https://plus.google.com/
-instagram_url: https://instagram.com
-github_url: https://github.com/artemsheludko/
+# twitter_url: https://twitter.com/javacreed
+# facebook_url: https://facebook.com/
+# googleplus_url: https://plus.google.com/
+# instagram_url: https://instagram.com
+github_url: https://github.com/javacreed/
