--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Java Creed
 description: Java Creed Blog
 url: "https://javacreed.com"
-permalink: ':title/'
+permalink: ":title/"
 baseurl: "/"
 
 # Comments
